--- a/LogbackDemo2/app/build.gradle
+++ b/LogbackDemo2/app/build.gradle
@@ -26,6 +26,11 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
-    compile files('libs/slf4j-api-1.7.12.jar')
-    compile files('libs/logback-android-1.1.1-4.jar')
+//    compile files('libs/slf4j-api-1.7.12.jar')
+//    compile files('libs/logback-android-1.1.1-4.jar')
+
+    compile 'org.slf4j:slf4j-api:1.7.21'
+    compile 'com.github.tony19:logback-android-core:1.1.1-6'
+    compile 'com.github.tony19:logback-android-classic:1.1.1-6'
+
 }
