--- a/LogbackDemo2/app/src/main/AndroidManifest.xml
+++ b/LogbackDemo2/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="obd.mapbar.com.logbackdemo2">
+    package="vir56k.logdemo.logbackdemo2">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
