--- a/checkstyle/MyApplication444/app/build.gradle
+++ b/checkstyle/MyApplication444/app/build.gradle
@@ -1,4 +1,10 @@
+
 apply plugin: 'com.android.application'
+//apply from: 'ch.gradle'
+
+//apply plugin: 'checkstyle'
+
+
 
 android {
     compileSdkVersion 28
@@ -27,3 +33,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+
+
